# rust-crud-test-task

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yml
migrations/2025-01-08-171528_create_users_and_posts/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: database.rs  environment.rs  mod.rs
src/handlers/: posts.rs  users.rs
src/models/: mod.rs  post.rs  user.rs
src/routes/: mod.rs  posts.rs  users.rs
