[package]
name = "crud-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "crud_example"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
tower = "0.4"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["trace"] }